# libbiosignalml

./: .gitmodules  CMakeLists.txt  Doxyfile  INSTALL.rst  README.rst
cmake/: biosignalmlConfig.cmake  strip_libraries.cmake
examples/: bsml.cpp
include/biosignalml/: CMakeLists.txt  annotation.h  biosignalml.h  formats.h  object.h  ontology.h  recording.h  segment.h  signal.h  timing.h
include/biosignalml/data/: data.h  hdf5.h  timeseries.h
src/: CMakeLists.txt  annotation.cpp  annotation.h  biosignalml.h  event.cpp  event.h  formats.cpp  formats.h  model.h  object.cpp  object.h  ontology.cpp  ontology.h  recording.cpp  recording.h  resource.cpp  segment.cpp  segment.h  signal.cpp  signal.h  timing.cpp  timing.h
src/data/: CMakeLists.txt  data.h  hdf5.cpp  hdf5.h  hdf5impl.cpp  hdf5impl.h  model.h  timeseries.cpp
src/formats/: hdf5.cpp  hdf5.h  hdf5impl.cpp  hdf5impl.h
tests/: CMakeLists.txt  bsml.cpp  bsml2.cpp  hdf5.cpp  hdf5impl.cpp  rdf.cpp  sinewave.ttl  test1.ttl  unittest.cpp
